--- a/src/css/main.css
+++ b/src/css/main.css
@@ -61,6 +61,7 @@ select {
   font-size: inherit;
   color: inherit;
   background-color: transparent;
+  -webkit-tap-highlight-color: transparent;
 }
 
 input::-ms-clear {
@@ -146,6 +147,8 @@ body {
   border-radius: 1rem;
   color: var(--neutral-color-100);
   background-color: var(--neutral-color-900);
+  will-change: max-height;
+  transition: max-height 60s ease;
 }
 .rating-card__icon {
   display: flex;
