--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -63,6 +63,7 @@ select {
   font-size: inherit;
   color: inherit;
   background-color: transparent;
+  -webkit-tap-highlight-color: transparent;
 }
 
 input::-ms-clear {
